fix vertical alignment of labels

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ p, label {
 label {
 	display: flex;
 	gap: .5em;
-	align-items: center;
+	align-items: baseline;
 }
 
 ul {
